# TradeSys

./: CMakeLists.txt
include/: config.h  datafeed.h  orderbook.h  tradeSim.h  webSocketClient.h
include/models/: fees.h  impact.h  logistics.h  slippage.h
models/: fees.cpp  impact.cpp  logistics.cpp  slippage.cpp
src/: datafeed.cpp  logger.cpp  main.cpp  orderbook.cpp  tradeSim.cpp  webSocketClient.cpp
ui/: main_page.cpp
